fix(styles): increase a z-index of gradient at the bottom of editor to overlay row counter box

--- a/templates/frontend/src/components/shared/editor/editor.module.scss
+++ b/templates/frontend/src/components/shared/editor/editor.module.scss
@@ -28,6 +28,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 4;
     width: 100%;
     height: 100px;
     pointer-events: none;
